--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.46f5c8f5.js"></script><link href="/static/css/main.073c9b0a.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+  .intro {
+    background-color: beige;
+  }
+ </style>
+ </head>
+ <body>
+   
+ <h1> My Profile</h1>
+ <h2>Name</h2>  
+ 
+ <div class="intro">
+  <p>My Name is Krishav.K.Jijeesh</p> 
+   
+   
+   </div>
+   </body>
+  <h2>Age</h2>
+ <head>
+ <style>
+   .mid {
+     background-color: cyan;
+   }
+   </style>
+   </head>
+  <body>
+  
+  <div class="mid">
+  <p>13</p>
+  </div>
+    
+  <h2>Class 
