--- a/index.html
+++ b/index.html
@@ -31,5 +31,46 @@
   <div class="mid">
   <p>13</p>
   </div>
-    
-  <h2>Class 
+  
+   <head>
+   <style> 
+  .out { 
+  background-color: rgb(120, 237, 17);
+  }
+   </style>
+   </head>
+   <body>
+  <h2>Class</h2>
+  <div class="out">
+<p>8 GPSI</p>
+</div>
+</body>
+<h2>School</h2>
+<head>
+<style>
+.abs {  
+background-color: rgb(209, 115, 209);
+}
+</style>
+</head>
+<body>
+<div class="abs">
+<p>Global Public School (GPS), Thiruvanyoor</p>    
+  </div>
+  </body>
+ 
+ <h2>Place of Living</h2>
+ <head>
+ <style>
+ .bad {
+  background-color: orangered;
+ }
+ </style>
+ </head>
+ <body>
+ <div class="bad">
+  <p>Kochi, Kerala</p>
+  </div>
+  </body>
+  <h1>You have reached the end of my profile</h1>
+       
